[metadata]
name = csv-shuffler
version = 0.0.4
author = Ramses Alexander Coraspe Valdez
author_email = contacto@wittline.com
description = A tool to automatically Shuffle lines in a csv file
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Wittline/csv-shuffler
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = False